--- a/goodvirus/config/daemon_config.ini
+++ b/goodvirus/config/daemon_config.ini
@@ -1,5 +1,9 @@
 [Daemon]
 interval = 10
+daemon_lore = false
+stealth_mode = false
 show_signature = true
-daemon_lore = true
-stealth_mode = true
+auto_update = true
+full_host_scan = true
+encrypt_logs = false
+ignore_system_noise = true
