--- a/goodvirus/config/daemon_config.ini
+++ b/goodvirus/config/daemon_config.ini
@@ -7,3 +7,5 @@ auto_update = true
 full_host_scan = true
 encrypt_logs = false
 ignore_system_noise = true
+limit_memory_entries = 1000
+limit_log_lines = 10000
